# json-parser

./: .gitignore  CHANGELOG.md  JSONParser.ts  LICENSE  README.md  json-parser.cabal
src/: JSON.hs  JSONParser.hs  Parser.hs  Serializer.hs  Tokenizer.hs  Types.hs
test/: Main.hs
